--- a/ControleViagens/ControleViagens/principal.Master
+++ b/ControleViagens/ControleViagens/principal.Master
@@ -1,16 +1,19 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="principal.master.cs" Inherits="ControleViagens.principal" %>
 
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head runat="server"><title></title>
-    <!-- INCLUIR ESTILO-->
+
+<html>
+<head runat="server">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title></title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
     <!-- INCLUIR Scripts-->
     <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.validate.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
-    <asp:ContentPlaceHolder ID="head" runat="server"></asp:ContentPlaceHolder>
+    <asp:ContentPlaceHolder ID="head" runat="server">
+    </asp:ContentPlaceHolder>
 </head>
 <body>
     <nav class="navbar navbar-inverse" role="navigation">
@@ -26,10 +29,10 @@
             </div>
         </div>
     </nav>
-    <!-- CONTEUDO -->
-    <div class="container">
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder" runat="server">
+    <div>
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
     </div>
+
 </body>
 </html>
